epub and pdf formats

--- a/docs/building-big-shiny-apps.tex
+++ b/docs/building-big-shiny-apps.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-08-02}
+    \date{2019-08-09}
 
 \usepackage{booktabs}
 
@@ -135,13 +135,15 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\hypertarget{disclaimer}{%
-\chapter{Disclaimer}\label{disclaimer}}
+\hypertarget{introduction}{%
+\chapter*{Introduction}\label{introduction}}
+\addcontentsline{toc}{chapter}{Introduction}
 
 This book is still at a Work in Progress stage.
 
 \hypertarget{motivation}{%
-\section{Motivation}\label{motivation}}
+\section*{Motivation}\label{motivation}}
+\addcontentsline{toc}{section}{Motivation}
 
 This book will not \textbf{get you started with Shiny}, nor \textbf{talk about how to deploy into production and scale your app}. What we'll see is \textbf{the process of building the app}. Why? Lots of blog posts and books talk about starting to use shiny or putting apps in production. Very few (if any) talk about this grey area between getting started and pushing into production.
 
@@ -150,7 +152,8 @@ So this is what this book is going to talk about: building Shiny application. We
 Hence, if you're starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further.
 
 \hypertarget{book-structure}{%
-\section{Book structure}\label{book-structure}}
+\section*{Book structure}\label{book-structure}}
+\addcontentsline{toc}{section}{Book structure}
 
 \begin{itemize}
 \item
@@ -163,13 +166,21 @@ Hence, if you're starting to read this book, we assume you have a working knowle
   Part 4 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 \end{itemize}
 
-\hypertarget{wanna-help}{%
-\section{Wanna help?}\label{wanna-help}}
+\hypertarget{about-the-authors}{%
+\section*{About the authors}\label{about-the-authors}}
+\addcontentsline{toc}{section}{About the authors}
+
+// TODO
+
+\hypertarget{want-to-help}{%
+\section*{Want to help?}\label{want-to-help}}
+\addcontentsline{toc}{section}{Want to help?}
 
 Any feedbacks on the book is very welcome. Feel free to \href{https://github.com/ThinkR-open/building-shiny-apps-workflow/issues}{open an issue}, or to make a PR if you spot a typo (I'm not a native english speaker, so there might be some waiting to be found ;) ).
 
 \hypertarget{other-resources}{%
-\section{Other resources}\label{other-resources}}
+\section*{Other resources}\label{other-resources}}
+\addcontentsline{toc}{section}{Other resources}
 
 \hypertarget{getting-started-with-shiny}{%
 \subsection{Getting started with Shiny}\label{getting-started-with-shiny}}
@@ -199,13 +210,18 @@ Any feedbacks on the book is very welcome. Feel free to \href{https://github.com
 
 \href{https://github.com/ThinkR-open/building-shiny-apps-workflow/issues}{Suggest a Resource!}
 
-\hypertarget{part-building-shiny-apps}{%
-\part{Building Shiny Apps}\label{part-building-shiny-apps}}
+\hypertarget{part-building-big-shiny-apps}{%
+\part{Building Big Shiny Apps}\label{part-building-big-shiny-apps}}
 
 \hypertarget{bigshinyapp}{%
 \chapter{About Big Shiny Apps}\label{bigshinyapp}}
 
 If you're reading this page, chances are you already know what a Shiny App is --- a web application that communicates with R, built in R, and working with R. Almost anybody can create a prototype for a small data product in a matter of hours. And no knowledge of HTML, CSS or JavaScript is required, making it really easy to use --- you can rapidly create a POC. But what to do now you want to build a big Shiny App?
+
+\hypertarget{a-very-short-introduction-to-shiny}{%
+\section{A (very) short introduction to Shiny}\label{a-very-short-introduction-to-shiny}}
+
+// TODO
 
 \hypertarget{whats-a-big-shiny-app}{%
 \section{What's a big Shiny App?}\label{whats-a-big-shiny-app}}
@@ -273,8 +289,8 @@ things are clickable---or not''
 
 // TODO: Find resources about simplicity in UI/UX design
 
-\hypertarget{working-as-a-team}{%
-\section{Working as a team}\label{working-as-a-team}}
+\hypertarget{working-as-a-team-tools-organisation}{%
+\section{Working as a team: tools \& organisation}\label{working-as-a-team-tools-organisation}}
 
 Big Shiny Apps usually mean that several people will work on the application. For example, at ThinkR, 3 to 4 people usually work on the application. So, how do we organize that?
 
@@ -327,87 +343,8 @@ Maintainance, on the other hand, is something to think about from the beginning.
 
 // TO DO: be more precise on the tooling.
 
-\hypertarget{part-step-by-step}{%
-\part{Step by Step}\label{part-step-by-step}}
-
-\hypertarget{step-design}{%
-\chapter{Step 1: Designing}\label{step-design}}
-
-Don't rush into coding. I know you want to, because it's what we like to do and what we are good at. But before entering the coding marathon, take time to think about the application and the way it will be deployed and used. Take a pen and a piece of paper and draw the app. Talk about it with the people who will use the app, just to decipher what they actually need. Take a moment to talk with the IT. Here are some questions you can ask:
-
-\begin{itemize}
-\tightlist
-\item
-  ``Who are the end users of the app?'' --- This will help you know if the end users are tech literate or not, and what they aim to achieve with the app.
-\item
-  ``How frequently will they use the app?'' --- The small details of the design \& the UI of an app you use on a daily basis is more crucial than when the app is used once a month.
-\item
-  ``What level of complexity and personalization do the users really need?'' --- People writing app specifications sometimes want more functionalities than what is actually needed by the users.
-\item
-  ``What level of interactivity do you want, and to what extent is it central?'' --- People love interactive graphs and like when things automatically sync with each other. Yet these two can make the app slower, without any significant gain. For example, being reactive to a \texttt{selectInput()} or a \texttt{sliderInput()} can lead to too much computation: maybe the user will not succeed to choose the right input the first, second or third time\ldots{} So let them do their choice, and add a button so that they can validate when they are ready.
-\item
-  ``How important is it that the app is fast?'' --- Should you spend a lot of time optimizing the little things?
-\item
-  etc.
-\end{itemize}
-
-Asking questions, taking notes, and drawing the app help you have a good idea of what is expected and what you have to do now.
-
-So, next step!
-
-\hypertarget{step-protopype}{%
-\chapter{Step 2: Prototype}\label{step-protopype}}
-
-I like to go ``UI first''. For two main reasons:
-
-\begin{itemize}
-\tightlist
-\item
-  Once the UI is set, there is no ``surprise implementation''. Once we agree on what elements there are in the app, there is no sudden ``oh the app needs to do that now''.
-\item
-  A pre-defined UI allows every person involved in the coding to know which part of the app they are working on. In other words, when you start working on the backend, it's much easier to work on a piece you can visually identify and integrate in a complete app scenario.
-\end{itemize}
-
-So yes, spend time writing a front-end prototype in lorem ipsum. And good news, we've got a tool for you: it's called \texttt{\{shinipsum\}}. The main goal of this package is to create random Shiny elements that can be used to draw a UI, without actually doing any heavy lifting in the backend.
-
-Hence, once you've got a draft of your app on a piece of paper, you can then move to the ``ipsum-UI'' stage: building the front-end of the app, and filling it with random Shiny elements, with functions like \texttt{random\_ggplot()} or \texttt{random\_DT()}.
-
-Another package that can be used to do that is \texttt{\{fakir\}}. This package is designed to create fake data frames, primarily for teaching purposes, but it can also be used for inserting data into a shiny prototype.
-
-\hypertarget{step-build}{%
-\chapter{Step 3: Build}\label{step-build}}
-
-Now the UI and the features are set, time to work on the backend.
-
-This part is pretty standard --- everybody can now work on the implementation of the functions that process the app inputs, in their own modules. As the UI, functionalities and modules have been defined in the previous steps, everyone (well, in theory) knows what they have to work on.
-
-And also, as said before, there should be no ``surprise implementation'', as the app has been well defined before.
-
-\hypertarget{step-secure}{%
-\chapter{Step 4: Secure}\label{step-secure}}
-
-Securing your app means two things: testing, and locking the application environment.
-
-So first, be sure to include tests all along the building process --- just like any other R code. As the app is contained in a package, you can use standard testing tools for testing the business logic of your app --- as said in the first part, it's important to split the backend functions and algorithm from the user interface. That means that these backend functions can run outside of the application. And yes, if they can run outside of the app, they can be tested the standard way, using \{testthat\}.
-
-When it comes to testing the front end, you can try the \{shinytest\} package from RStudio, if you need to be sure there is no visual regression all along the project development. \{shinyloadtest\}, on the other hand, tests how an application behaves when one, two, three, twenty, one hundred users connect to the app, and gives you a visual report about the connection and response time of each session.
-
-One other tool I like to use is Katalon Studio. It's not R related, and can be used with any kind of web app. How it works is quite simple: it opens your browser where the Shiny app runs, and record everything that happens. Once you stop the recording, you can relaunch the app and it will replay all the events it has recorded. And of course, you can specify your own scenario, define your own events, etc. It's not that straightforward to use, but once you get a good grasp of how it works, it's a very powerful tool.
-
-Secondly, secure your app means that it can be deployed again any time in the future --- in other words, you have to ensure you've got a proper handle on the required R version, and of the package versions which are required to run your app. That means that you have to be aware that upgrading a package might break your app --- so, provide an environment that can prevent your app from breaking when a package gets updated. For that, there is, of course, Docker, R specific tools like \texttt{\{packrat\}}, or deploying custom CRAN repositories or package manager.
-
-\hypertarget{step-deploy}{%
-\chapter{Step 5: Deploy}\label{step-deploy}}
-
-Tools for deployment are not the subject of this blog post so I won't talk about this in detail (remember, we are talking about building 😉 ), but our two tools of choice are Docker \& ShinyProxy, and RStudio Connect.
-
-// TODO: link to resources.
-
-\hypertarget{part-tools}{%
-\part{Tools}\label{part-tools}}
-
 \hypertarget{structure}{%
-\chapter{Structuring your App Project}\label{structure}}
+\chapter{Structuring your Project}\label{structure}}
 
 \hypertarget{shiny-app-as-a-package}{%
 \section{Shiny App as a Package}\label{shiny-app-as-a-package}}
@@ -668,11 +605,6 @@ You'll get the Dockerfile you need with \texttt{golem::add\_dockerfile()}.
   \href{https://kbroman.org/pkg_primer/}{R package primer - a minimal tutorial}
 \end{itemize}
 
-\hypertarget{understanding-golem-package-structure}{%
-\section{\texorpdfstring{Understanding \texttt{\{golem\}} package structure}{Understanding \{golem\} package structure}}\label{understanding-golem-package-structure}}
-
-// TODO
-
 \hypertarget{using-shiny-modules}{%
 \section{Using Shiny Modules}\label{using-shiny-modules}}
 
@@ -684,13 +616,21 @@ You'll get the Dockerfile you need with \texttt{golem::add\_dockerfile()}.
 // TODO
 
 \hypertarget{golem}{%
-\chapter{Using Golem}\label{golem}}
+\chapter{\texorpdfstring{Introduction to \texttt{\{golem\}}}{Introduction to \{golem\}}}\label{golem}}
 
 Ok, that's a lot of things to process. Is there a tool that can help us simplify this workflow? Of course there is, and it's called \texttt{\{golem\}}.
 
 It can be found at \url{https://github.com/ThinkR-open/golem}
 
-For now, \texttt{\{golem\}} can only be found on GitHub (but it should be on CRAN soon), so you have to install it with:
+The stable release can be found on CRAN, and installed with:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{install.packages}\NormalTok{(}\StringTok{"golem"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\texttt{\{golem\}} can only be found on GitHub so you have to install it with:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -712,7 +652,145 @@ Note before using \texttt{\{golem\}}:
   A \texttt{\{golem\}} app works better if you are working with \texttt{shiny\ modules}, so knowing how modules work is heavily recommended.
 \end{itemize}
 
-In the rest of the Vignettes, we'll assume you're working in RStudio.
+In the rest of the book, we'll assume you're working in RStudio.
+
+\hypertarget{understanding-golem-package-structure}{%
+\section{\texorpdfstring{Understanding \texttt{\{golem\}} package structure}{Understanding \{golem\} package structure}}\label{understanding-golem-package-structure}}
+
+// TODO
+
+\hypertarget{workflow}{%
+\chapter{The workflow}\label{workflow}}
+
+-\textgreater{} Overview of the workflow
+
+\hypertarget{part-1-design}{%
+\section{Part 1: Design}\label{part-1-design}}
+
+// TODO
+
+\hypertarget{part-2-prototype}{%
+\section{Part 2: Prototype}\label{part-2-prototype}}
+
+// TODO
+
+\hypertarget{part-3-build}{%
+\section{Part 3: Build}\label{part-3-build}}
+
+// TODO
+
+\hypertarget{part-4-secure}{%
+\section{Part 4: Secure}\label{part-4-secure}}
+
+// TODO
+
+\hypertarget{part-5-deploy}{%
+\section{Part 5: Deploy}\label{part-5-deploy}}
+
+// TODO
+
+\hypertarget{part-step-1-designing}{%
+\part{Step 1: Designing}\label{part-step-1-designing}}
+
+\hypertarget{step-design}{%
+\chapter{Don't rush into coding}\label{step-design}}
+
+\hypertarget{designing-before-coding}{%
+\section{Designing before coding}\label{designing-before-coding}}
+
+Don't rush into coding. I know you want to, because it's what we like to do and what we are good at. But before entering the coding marathon, take time to think about the application and the way it will be deployed and used.
+
+\hypertarget{ask-questions}{%
+\section{Ask questions}\label{ask-questions}}
+
+Take a pen and a piece of paper and draw the app. Talk about it with the people who will use the app, just to decipher what they actually need. Take a moment to talk with the IT. Here are some questions you can ask:
+
+\begin{itemize}
+\tightlist
+\item
+  ``Who are the end users of the app?'' --- This will help you know if the end users are tech literate or not, and what they aim to achieve with the app.
+\item
+  ``How frequently will they use the app?'' --- The small details of the design \& the UI of an app you use on a daily basis is more crucial than when the app is used once a month.
+\item
+  ``What level of complexity and personalization do the users really need?'' --- People writing app specifications sometimes want more functionalities than what is actually needed by the users.
+\item
+  ``What level of interactivity do you want, and to what extent is it central?'' --- People love interactive graphs and like when things automatically sync with each other. Yet these two can make the app slower, without any significant gain. For example, being reactive to a \texttt{selectInput()} or a \texttt{sliderInput()} can lead to too much computation: maybe the user will not succeed to choose the right input the first, second or third time\ldots{} So let them do their choice, and add a button so that they can validate when they are ready.
+\item
+  ``How important is it that the app is fast?'' --- Should you spend a lot of time optimizing the little things?
+\item
+  etc.
+\end{itemize}
+
+Asking questions, taking notes, and drawing the app help you have a good idea of what is expected and what you have to do now.
+
+So, next step!
+
+\hypertarget{part-step-2-prototype}{%
+\part{Step 2: Prototype}\label{part-step-2-prototype}}
+
+\hypertarget{stepprotopype}{%
+\chapter{Building an ``ipsum-app''}\label{stepprotopype}}
+
+\hypertarget{the-ui-first-approach}{%
+\section{The ``UI first'' approach}\label{the-ui-first-approach}}
+
+I like to go ``UI first''. For two main reasons:
+
+\begin{itemize}
+\tightlist
+\item
+  Once the UI is set, there is no ``surprise implementation''. Once we agree on what elements there are in the app, there is no sudden ``oh the app needs to do that now''.
+\item
+  A pre-defined UI allows every person involved in the coding to know which part of the app they are working on. In other words, when you start working on the backend, it's much easier to work on a piece you can visually identify and integrate in a complete app scenario.
+\end{itemize}
+
+So yes, spend time writing a front-end prototype in lorem ipsum. And good news, we've got a tool for you: it's called \texttt{\{shinipsum\}}. The main goal of this package is to create random Shiny elements that can be used to draw a UI, without actually doing any heavy lifting in the backend.
+
+Hence, once you've got a draft of your app on a piece of paper, you can then move to the ``ipsum-UI'' stage: building the front-end of the app, and filling it with random Shiny elements, with functions like \texttt{random\_ggplot()} or \texttt{random\_DT()}.
+
+Another package that can be used to do that is \texttt{\{fakir\}}. This package is designed to create fake data frames, primarily for teaching purposes, but it can also be used for inserting data into a shiny prototype.
+
+\hypertarget{proto}{%
+\chapter{Tools for prototyping}\label{proto}}
+
+These two tools allow you to prototype a Shiny App and to go ``UI first''. Learn more:
+
+\hypertarget{fast-prototyping-with-shinipsum}{%
+\section{\texorpdfstring{Fast prototyping with \texttt{\{shinipsum\}}}{Fast prototyping with \{shinipsum\}}}\label{fast-prototyping-with-shinipsum}}
+
+// TODO
+
+\begin{itemize}
+\tightlist
+\item
+  \url{https://github.com/ThinkR-open/shinipsum}
+\end{itemize}
+
+\hypertarget{using-fakir-for-fake-data-generation}{%
+\section{\texorpdfstring{Using \texttt{\{fakir\}} for fake data generation}{Using \{fakir\} for fake data generation}}\label{using-fakir-for-fake-data-generation}}
+
+// TODO
+
+\begin{itemize}
+\tightlist
+\item
+  \url{https://github.com/ThinkR-open/fakir}
+\end{itemize}
+
+\hypertarget{part-step-3-build}{%
+\part{Step 3: Build}\label{part-step-3-build}}
+
+\hypertarget{stepbuild}{%
+\chapter{\texorpdfstring{Building app with \texttt{\{golem\}}}{Building app with \{golem\}}}\label{stepbuild}}
+
+Now the UI and the features are set, time to work on the backend.
+
+This part is pretty standard --- everybody can now work on the implementation of the functions that process the app inputs, in their own modules. As the UI, functionalities and modules have been defined in the previous steps, everyone (well, in theory) knows what they have to work on.
+
+And also, as said before, there should be no ``surprise implementation'', as the app has been well defined before.
+
+\hypertarget{using-golem}{%
+\section{\texorpdfstring{Using \texttt{\{golem\}}}{Using \{golem\}}}\label{using-golem}}
 
 \hypertarget{create-a-package}{%
 \subsection{Create a package}\label{create-a-package}}
@@ -1054,42 +1132,137 @@ You can then make any function being ``dev-dependant'' with the \texttt{make\_de
 \end{Highlighting}
 \end{Shaded}
 
+\hypertarget{part-step-4-secure}{%
+\part{Step 4: Secure}\label{part-step-4-secure}}
+
+\hypertarget{step-secure}{%
+\chapter{Build yourself a safe net}\label{step-secure}}
+
+Securing your app means two things: testing, and locking the application environment.
+
+\hypertarget{testing-your-app}{%
+\section{Testing your app}\label{testing-your-app}}
+
+So first, be sure to include tests all along the building process --- just like any other R code. As the app is contained in a package, you can use standard testing tools for testing the business logic of your app --- as said in the first part, it's important to split the backend functions and algorithm from the user interface. That means that these backend functions can run outside of the application. And yes, if they can run outside of the app, they can be tested the standard way, using \{testthat\}.
+
+When it comes to testing the front end, you can try the \{shinytest\} package from RStudio, if you need to be sure there is no visual regression all along the project development. \{shinyloadtest\}, on the other hand, tests how an application behaves when one, two, three, twenty, one hundred users connect to the app, and gives you a visual report about the connection and response time of each session.
+
+One other tool I like to use is Katalon Studio. It's not R related, and can be used with any kind of web app. How it works is quite simple: it opens your browser where the Shiny app runs, and record everything that happens. Once you stop the recording, you can relaunch the app and it will replay all the events it has recorded. And of course, you can specify your own scenario, define your own events, etc. It's not that straightforward to use, but once you get a good grasp of how it works, it's a very powerful tool.
+
+\hypertarget{a-reproducible-environment}{%
+\section{A reproducible environment}\label{a-reproducible-environment}}
+
+Secondly, secure your app means that it can be deployed again any time in the future --- in other words, you have to ensure you've got a proper handle on the required R version, and of the package versions which are required to run your app. That means that you have to be aware that upgrading a package might break your app --- so, provide an environment that can prevent your app from breaking when a package gets updated. For that, there is, of course, Docker, R specific tools like \texttt{\{packrat\}}, or deploying custom CRAN repositories or package manager.
+
+\hypertarget{secure}{%
+\chapter{Secure your work}\label{secure}}
+
+\hypertarget{git}{%
+\section{Git}\label{git}}
+
+Friends don't let friends work on a coding project without version control.
+
+// TO DO
+
+\hypertarget{ci-and-testing}{%
+\section{CI and testing}\label{ci-and-testing}}
+
+Testing is central for making your application survive in the long run. The \{testthat\} package can be used to test the ``business logic'' side of your app, while the application features can be tested with packages like \{shinytest\}, or software like Katalon.
+
+// TO DO: more info about the tools + link to resources.
+
+\hypertarget{part-step-5-deploy}{%
+\part{Step 5: Deploy}\label{part-step-5-deploy}}
+
+\hypertarget{stepdeploy}{%
+\chapter{Send your app to production}\label{stepdeploy}}
+
+Tools for deployment are not the subject of this blog post so I won't talk about this in detail (remember, we are talking about building 😉 ), but our two tools of choice are Docker \& ShinyProxy, and RStudio Connect.
+
+// TODO: link to resources.
+
+\hypertarget{deploy-golem}{%
+\chapter{\texorpdfstring{Deploy with \texttt{\{golem\}}}{Deploy with \{golem\}}}\label{deploy-golem}}
+
+\hypertarget{local-deployment-1}{%
+\section{Local deployment}\label{local-deployment-1}}
+
+// TODO
+
 \hypertarget{deploying-apps-with-golem}{%
 \section{\texorpdfstring{Deploying Apps with \texttt{\{golem\}}}{Deploying Apps with \{golem\}}}\label{deploying-apps-with-golem}}
 
 The \texttt{dev/03\_deploy.R} file contains function for deploying on various plateforms.
 
-\hypertarget{rstudio-connect}{%
-\subsection{RStudio Connect}\label{rstudio-connect}}
+\hypertarget{rstudio-environments}{%
+\section{RStudio Environments}\label{rstudio-environments}}
 
-To create an \texttt{app.R} ready to be deployed on RStudio Connect, run:
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{golem}\OperatorTok{::}\KeywordTok{add_rconnect_file}\NormalTok{()}
-\end{Highlighting}
-\end{Shaded}
+// TODO
 
 \hypertarget{docker}{%
-\subsection{Docker}\label{docker}}
+\section{Docker}\label{docker}}
 
-You can create a generic Dockerfile, or one which is plateform specific (for now, only ShinyProxy and Heroku are supported).
+// TODO
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\CommentTok{# If you want to deploy via a generic Dockerfile}
-\NormalTok{golem}\OperatorTok{::}\KeywordTok{add_dockerfile}\NormalTok{()}
+\hypertarget{part-optimizing}{%
+\part{Optimizing}\label{part-optimizing}}
 
-\CommentTok{# If you want to deploy to ShinyProxy}
-\NormalTok{golem}\OperatorTok{::}\KeywordTok{add_shinyproxy_dockerfile}\NormalTok{()}
+\hypertarget{optim-caveat}{%
+\chapter{Common Application Caveats}\label{optim-caveat}}
 
-\CommentTok{# If you want to deploy to Heroku}
-\NormalTok{golem}\OperatorTok{::}\KeywordTok{add_heroku_dockerfile}\NormalTok{()}
-\end{Highlighting}
-\end{Shaded}
+\hypertarget{reactivity-anti-patterns}{%
+\section{Reactivity anti-patterns}\label{reactivity-anti-patterns}}
 
-\hypertarget{using-golem-js-functions}{%
-\section{\texorpdfstring{Using \texttt{\{golem\}} js functions}{Using \{golem\} js functions}}\label{using-golem-js-functions}}
+// TODO
+
+\hypertarget{reading-data}{%
+\section{Reading data}\label{reading-data}}
+
+// TODO
+
+\hypertarget{r-does-too-much}{%
+\section{R does too much}\label{r-does-too-much}}
+
+// TODO
+
+\hypertarget{optimizing-shiny-code}{%
+\chapter{Optimizing Shiny Code}\label{optimizing-shiny-code}}
+
+\hypertarget{reading-data-1}{%
+\section{Reading data}\label{reading-data-1}}
+
+// TODO
+
+\hypertarget{caching-elements}{%
+\section{Caching elements}\label{caching-elements}}
+
+// TODO
+
+\hypertarget{keeping-things-simple}{%
+\section{Keeping things simple}\label{keeping-things-simple}}
+
+// TODO
+
+\hypertarget{optimjs}{%
+\chapter{Using JavaSript}\label{optimjs}}
+
+\hypertarget{client-side-optimization}{%
+\section{Client-side Optimization}\label{client-side-optimization}}
+
+// TODO
+
+\hypertarget{javascript---shiny-communication}{%
+\section{JavaScript \textless{}-\textgreater{} Shiny communication}\label{javascript---shiny-communication}}
+
+// TODO
+
+\hypertarget{common-javascript-patterns-for-shiny}{%
+\section{Common JavaScript patterns for Shiny}\label{common-javascript-patterns-for-shiny}}
+
+// TODO
+
+\hypertarget{about-golem-js-functions}{%
+\section{\texorpdfstring{About \texttt{\{golem\}} js functions}{About \{golem\} js functions}}\label{about-golem-js-functions}}
 
 \texttt{\{golem\}} comes with a series of JavaScript functions that you can call from the server. These functions are added by default with \texttt{golem::js()} in \texttt{app\_ui}.
 
@@ -1159,82 +1332,6 @@ contains \texttt{href} \& \texttt{data-value}. You can refer to these attributes
 \item
   \texttt{a{[}data-value="panel2"{]}}: link with \texttt{data-value} being \texttt{"panel2"}
 \end{itemize}
-
-\hypertarget{proto}{%
-\chapter{Prototyping}\label{proto}}
-
-These two tools allow you to prototype a Shiny App and to go ``UI first''. Learn more:
-
-\hypertarget{shinipsum}{%
-\section{\{shinipsum\}}\label{shinipsum}}
-
-// TODO
-
-\begin{itemize}
-\tightlist
-\item
-  \url{https://github.com/ThinkR-open/shinipsum}
-\end{itemize}
-
-\hypertarget{fakir}{%
-\section{\{fakir\}}\label{fakir}}
-
-// TODO
-
-\begin{itemize}
-\tightlist
-\item
-  \url{https://github.com/ThinkR-open/fakir}
-\end{itemize}
-
-\hypertarget{tooling}{%
-\chapter{Other tools}\label{tooling}}
-
-\hypertarget{package}{%
-\section{Package}\label{package}}
-
-We believe that Shiny Apps are to be put into a package. Why? Because it allows them to be documented, tested, and can be installed in several environments.
-
-Also, think about your last Shiny app that wasn't in a package. It's an \texttt{app.R}, maybe with a folder you're sourcing and which contains functions (let's say in a\texttt{R/} folder). Maybe you've written some meta information (let's call it a \texttt{DESCRIPTION}), and some tests you've put in a \texttt{tests/} folder. Also, as you want to be sure to do the things right, you've put documentation in your functions. Do you see where I'm heading? Yes, you've written an R package.
-
-\hypertarget{git}{%
-\section{Git}\label{git}}
-
-Friends don't let friends work on a coding project without version control.
-
-// TO DO
-
-\hypertarget{shiny-modules}{%
-\section{Shiny modules}\label{shiny-modules}}
-
-Shiny modules are crucial tools when it comes to building big shiny apps: they allow to collaborate, to split the work into pieces, they facilitate testing, and they allow implementation of new features to be made more easily.
-
-// TO DO: develop more and link to resources
-
-\hypertarget{ci-and-testing}{%
-\section{CI and testing}\label{ci-and-testing}}
-
-Testing is central for making your application survive in the long run. The \{testthat\} package can be used to test the ``business logic'' side of your app, while the application features can be tested with packages like \{shinytest\}, or software like Katalon.
-
-// TO DO: more info about the tools + link to resources.
-
-\hypertarget{part-optimizing}{%
-\part{Optimizing}\label{part-optimizing}}
-
-\hypertarget{optim-caveat}{%
-\chapter{Common Application Caveats}\label{optim-caveat}}
-
-// TODO
-
-\hypertarget{optim-r}{%
-\chapter{Optimizing Shiny Code}\label{optim-r}}
-
-// TODO
-
-\hypertarget{optim-js}{%
-\chapter{Using JavaSript}\label{optim-js}}
-
-// TODO
 
 
 \end{document}
