update header numerotation for index.Rmd

--- a/docs/building-big-shiny-apps.tex
+++ b/docs/building-big-shiny-apps.tex
@@ -183,7 +183,8 @@ Any feedbacks on the book is very welcome. Feel free to \href{https://github.com
 \addcontentsline{toc}{section}{Other resources}
 
 \hypertarget{getting-started-with-shiny}{%
-\subsection{Getting started with Shiny}\label{getting-started-with-shiny}}
+\subsection*{Getting started with Shiny}\label{getting-started-with-shiny}}
+\addcontentsline{toc}{subsection}{Getting started with Shiny}
 
 \begin{itemize}
 \tightlist
@@ -198,7 +199,8 @@ Any feedbacks on the book is very welcome. Feel free to \href{https://github.com
 \end{itemize}
 
 \hypertarget{shiny-into-production}{%
-\subsection{Shiny into production}\label{shiny-into-production}}
+\subsection*{Shiny into production}\label{shiny-into-production}}
+\addcontentsline{toc}{subsection}{Shiny into production}
 
 \begin{itemize}
 \tightlist
