--- a/index.Rmd
+++ b/index.Rmd
@@ -41,14 +41,14 @@ Any feedbacks on the book is very welcome. Feel free to [open an issue](https://
 
 ## Other resources {-}
 
-### Getting started with Shiny 
+### Getting started with Shiny  {-}
 
 + [Learn Shiny with RStudio](https://shiny.rstudio.com/tutorial/)
 + [Getting Started with Shiny](https://ourcodingclub.github.io/2017/03/07/shiny.html)
 + [(WIP) Mastering Shiny](https://github.com/jcheng5/shiny-book)
 + [A gRadual intRoduction to Shiny](https://laderast.github.io/gradual_shiny/)
 
-### Shiny into production 
+### Shiny into production  {-}
 
 + [Shiny in production: Principles, practices, and tools](https://resources.rstudio.com/rstudio-conf-2019/shiny-in-production-principles-practices-and-tools-joe-cheng)
 + [Shiny in Production](https://kellobri.github.io/shiny-prod-book/)
