--- a/docs/building-big-shiny-apps.tex
+++ b/docs/building-big-shiny-apps.tex
@@ -157,13 +157,11 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 
 \begin{itemize}
 \item
-  Part 1 (Building big Shiny Apps) gives a general context about what is a big Shiny Apps and what challenges arise when you're dealing with a big application.
+  Part 1 (Building big Shiny Apps) gives a general context about what is a big Shiny Apps and what challenges arise when you're dealing with a big application. It also introduces the \texttt{\{golem\}} package and more general concept about organising your workflow.
 \item
-  Part 2 (Step by Step) describes a series of steps you can take when you want to build a big Shiny App.
+  Part 2 to 6 describes a series of steps you can take when you want to build a big Shiny App, and the tooling associated with each.
 \item
-  Part 3 (Tools) introduces various tools you can use: notably the \texttt{\{golem\}} package.
-\item
-  Part 4 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
+  Part 7 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 \end{itemize}
 
 \hypertarget{about-the-authors}{%
