--- a/index.Rmd
+++ b/index.Rmd
@@ -23,13 +23,11 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 
 ## Book structure {-}
 
-+ Part 1 (Building big Shiny Apps) gives a general context about what is a big Shiny Apps and what challenges arise when you're dealing with a big application. 
++ Part 1 (Building big Shiny Apps) gives a general context about what is a big Shiny Apps and what challenges arise when you're dealing with a big application. It also introduces the `{golem}` package and more general concept about organising your workflow.
 
-+ Part 2 (Step by Step) describes a series of steps you can take when you want to build a big Shiny App. 
++ Part 2 to 6 describes a series of steps you can take when you want to build a big Shiny App, and the tooling associated with each.
 
-+ Part 3 (Tools) introduces various tools you can use: notably the `{golem}` package.
-
-+ Part 4 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
++ Part 7 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 
 ## About the authors {-}
 
