Changed the authors

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Building Big Shiny Apps - A Workflow"
-author: "Colin Fay"
+author: "Colin Fay, Vincent Guyader, Cervan Girard, Sébastien Rochette"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
