added that the first part of the book will be light on code

--- a/index.Rmd
+++ b/index.Rmd
@@ -23,11 +23,11 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 
 ## Book structure {-}
 
-+ Part 1 (Building big Shiny Apps) gives a general context about what is a big Shiny Apps and what challenges arise when you're dealing with a big application. It also introduces the `{golem}` package and more general concept about organising your workflow.
++ Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you're dealing with a large scale application. It also introduces the `{golem}` package and more general concept about organising your workflow. This first part will be light on code: you'll read more about conceptual ideas and organisation strategy. 
 
-+ Part 2 to 6 describes a series of steps you can take when you want to build a big Shiny App, and the tooling associated with each.
++ Part 2 to 6 describes a series of steps you can take when you want to build a Shiny App, and the tooling associated with each step.
 
-+ Part 7 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
++ Part 7 (Optimizing) tackles the question of optimization, first by presenting some common caveats of Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 
 ## About the authors {-}
 
@@ -52,3 +52,33 @@ Any feedbacks on the book is very welcome. Feel free to [open an issue](https://
 + [Shiny in Production](https://kellobri.github.io/shiny-prod-book/)
 
 [Suggest a Resource!](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues)
+
+```{r echo = FALSE}
+right_link <- function(text, link){
+  htmltools::tagList(
+    htmltools::singleton(
+      htmltools::tags$style(
+        ".right{ text-align: right;}"
+      )
+    ), 
+    htmltools::tags$div(
+      class = "right",
+      htmltools::tags$a(
+        href = link, 
+        text
+      )
+    )
+  )
+}
+
+with_tooltip <- function(text, tooltip){
+  htmltools::tags$span(
+    class = "tooltip", 
+    text, 
+    htmltools::tags$span(
+      class="tooltiptext", 
+      tooltip
+    )
+  )
+}
+```
