some elements about UX

--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -1,25 +1,36 @@
-# Challenges {#challenges}
+# Planning Ahead {#planning}
 
-## Designing the UI
+## UX Matters
 
-Choosing a UI is hard — we have a natural tendency, as coders, to be focused on the backend, i.e the algorithmic part of the application. But let's state the truth: no matter how complex and innovative your backend can be, your application is bad if your UI is bad. That's the hard truth. If people can't understand how to use your application, your application doesn't work. No matter how incredible the backend is. 
+We have a natural tendency, as R-coders, to be focused on the backend, i.e the algorithmic part of the application. But let's state the truth: no matter how complex and innovative your backend is , your application is bad if your User Experience (UX) is bad. That's the hard truth. If people can't understand how to use your application, your application isn't successful, no matter how incredible the backend is. 
 
-### Thinking about accessibility
-
-A user interface needs to be "ready to be consumed" by the broader audience possible. That means people with visual, mobility, or cognitive disabilities. 
-
-Web Accessibility is pretty standard concept in the web development world, and you can learn about this straight from the first chapter of [learn.freecodecamp.org](https://learn.freecodecamp.org/). 
--> Screen to speech technology : html semantic tags
--> Mobility impairment, people w/ parkinson for example. Exemple of the text input & ENTER button. Making things keyboard friendly. 
--> ColorBlind, viridis
-
+-> Thinking about the end user matters
 
 ### "Don't make me think" 
 
-Two contexts for using a shiny app : professional context or for fun. In both : people want the app to be useable, and easily usable. Work : don't want to lose time figuring out how to use the app. Fun : if you don't understand in a matter of minutes how to use the app, you'll stop using it. 
+> "Simplify, then add lightness"
 
--> KISS principle
--> "Don't make me think" 
+> __Colin Chapman CBE, Founder of Lotus Cars__
+
+There are mainly two contexts where you'll be building a web app with R: one for professional use (i.e people will rely on this app to do their job), or for fun (i.e people will just use the app as a distraction). But in both cases, people will want the app to be useable, and __easily__ usable. 
+
+If people will use your app in a professional context, they don't want to fight with your interface, read complexe manuals, or lose time understanding what is supposed to do what in your application. Think about all the professional applications and softwares that you've been ranting about during your professional life. You don't want your app to be one of that. On the other end, if users open your app for fun, they are not going to fight your app into submission: they are just going to give up using your app if it's too complex to be used. 
+
+#### The KISS principle
+
+> The KISS principle states that most systems work best if they are kept simple rather than made complicated; therefore, simplicity should be a key goal in design, and unnecessary complexity should be avoided.
+
+`r right_link("KISS principle", "https://en.wikipedia.org/wiki/KISS_principle")`
+
+Deeply rooted in the [Unix Philosophy](http://www.catb.org/~esr/writings/taoup/html/ch01s07.html), the KISS principle, stating that one should "Keep Thing Simple, Stupid", 
+
+> Rule of Least Surprise: In interface design, always do the least surprising thing.
+
+`r right_link("Basics of the Unix Philosophy", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html")`
+
+
+
+#### "Don't make me think" 
 
 Try to find a simple, and efficient UI. One that people can understand and use in a matter of seconds. Don't implement features or visual elements that are not actually needed, just "in case". And spend time working on that UI, really thinking about what visual elements you are implementing. 
 
@@ -35,6 +46,19 @@ things are clickable—or not"
 -> Restrain reactivity 
 
 -> Not everything needs to be interactive plots 
+
+### About Accessibility 
+
+A user interface needs to be "ready to be consumed" by the broader audience possible. That means people with visual, mobility, or cognitive disabilities. 
+
+Web Accessibility is pretty standard concept in the web development world, and you can learn about this straight from the first chapter of [learn.freecodecamp.org](https://learn.freecodecamp.org/). 
+-> Screen to speech technology : html semantic tags
+-> Mobility impairment, people w/ parkinson for example. Exemple of the text input & ENTER button. Making things keyboard friendly. 
+-> ColorBlind, viridis
+
+### Further reading 
+
++ [_Don't Make Me Think_, Steve Krug](https://en.wikipedia.org/wiki/Don%27t_Make_Me_Think)
 
 // TODO: Find resources about simplicity in UI/UX design
 
@@ -53,7 +77,7 @@ Big Shiny Apps usually mean that several people will work on the application. Fo
 + List the tasks, and open one issue for each task on your version control system. Each issue will be solved in a separate branch. 
 + Finally, assign one module to one developer — if it seems that working on one module is a two-person job, divide again into two other submodules. This is a relatively complex task, as the output of one module influences the input of another, so be sure to assign them well. 
 
-## Making the app production ready
+## Workin with a "long-term" mindset
 
 ### Scaling
 
